fix: code compilation and other fixes